fixing contrast issues

--- a/themes/hugo-theme-learn/static/css/theme-yaub.css
+++ b/themes/hugo-theme-learn/static/css/theme-yaub.css
@@ -35,12 +35,12 @@
     --BUTTON-BORDER-color: #ccc;
 
     --TOC-BORDER-color: #d2d2d2;
-    --TOC-INACTIVE-color: #d2d2d2;
-    --TOC-NEXTPREV-color: #d2d2d2;
+    --TOC-INACTIVE-color: #323232;
+    --TOC-NEXTPREV-color: #323232;
 
     --MENU-TAG-BG-color: #06c;
 
-    --INLINE-CODE-BG-color: #c3c3c3;
+    --INLINE-CODE-BG-color: #e0e0e0;
     --INLINE-CODE-color: #ab2121;
 
     --CLIPBOARD-color: #fff;
@@ -259,6 +259,7 @@ pre .copy-to-clipboard:hover {
 
 #TableOfContents > ul > li > ul > li > a {
     color: var(--TOC-INACTIVE-color);
+    font-weight: bold;
 }
 
 #TableOfContents > ul > li > ul > li.active > a {
